fixed toggle function bug which caused text to jump, added specification header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,13 +322,12 @@ p.skoot-route {
 /*------------Shop------------*/
 
 
-
 .scooter-shop-img {
     padding-top: 1.5rem;
     max-width: 100%;
     height: 60vh;
     float: left;
-    margin-right: 7rem;
+    margin-right: 5rem;
 }
 
 .scooter-shop-img2 {
@@ -336,7 +335,7 @@ p.skoot-route {
     max-width: 100%;
     height: 60vh;
     float: right;
-    margin-left: 7rem;
+    margin-left: 5rem;
 }
 
 .scooter-wrap {
@@ -348,11 +347,11 @@ p.skoot-route {
     font-size: 1.5rem;
     margin-bottom: 20px;
     font-weight: bolder;
-    text-align: center;
 }
 
-.buttons {
-    text-align: center;
+.spec-header {
+    font-weight: bolder;
+    text-decoration: underline #35b729;
 }
 
 .shop_btn {
@@ -370,7 +369,6 @@ p.skoot-route {
 }
 
 .shop-header {
-    text-align: center;
     padding-bottom: 1rem;
 }
 
@@ -381,6 +379,26 @@ p.skoot-route {
     font-size: 1rem;
     padding: 15px 30px;
     color: #000;
+}
+
+.info_btn:focus {
+    border: 3px solid #35b729;
+    color: black;
+    outline: 0;
+}
+
+
+ul.more-specs,
+ul.more-specs2,
+ul.more-specs3,
+ul.more-specs4 {
+    display: none;
+    list-style-type: none;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
 
 
